--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,7 @@ dependencies {
 
 UnixOperatingSystemMXBean osMBean = (UnixOperatingSystemMXBean) ManagementFactory.getOperatingSystemMXBean()
 
-System.out.println("opendfs: " + osMBean.getOpenFileDescriptorCount())
-System.out.println("maxfds:  " + osMBean.getMaxFileDescriptorCount())
+System.out.println("Gradle Build script max files: " + osMBean.getMaxFileDescriptorCount())
 
 application {
     // Define the main class for the application.
